--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ pydantic==2.4.2
 pydantic-core==2.10.1
 python-dateutil==2.8.2
 python-docx==0.8.11
+python-multipart==0.0.6
 pytz==2023.3.post1
 six==1.16.0
 sniffio==1.3.0
